Fix T50968: Cycles crashes when image datablock points to a directory

See more details about root of the cause there:

  https://github.com/OpenImageIO/oiio/pull/1640